--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 /JSONParsersPerformance/Project/bin
 /JSONParsersPerformance/BIN/*.config
 /JSONParsersPerformance/BIN/*.pdb
+/JSONParsersPerformance/Project/*.user
