--- a/JSONParsersPerformance/Project/JSONParsersPerformance.csproj
+++ b/JSONParsersPerformance/Project/JSONParsersPerformance.csproj
@@ -56,6 +56,9 @@
     <Reference Include="Newtonsoft.Json901">
       <HintPath>..\..\..\Newtonsoft.Json\Src\Newtonsoft.Json\bin\Debug\Net45\Newtonsoft.Json901.dll</HintPath>
     </Reference>
+    <Reference Include="SimpleJson0360-Net45">
+      <HintPath>..\..\..\simple-json\bin\Net45\Release\SimpleJson0360-Net45.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
