--- a/JSONParsersPerformance/Project/JSONParsersPerformance.csproj
+++ b/JSONParsersPerformance/Project/JSONParsersPerformance.csproj
@@ -81,6 +81,7 @@
     <Compile Include="SimpleJSON_20121217.cs" />
     <Compile Include="SimpleJSON_20121217_StringBuilderEscape.cs" />
     <Compile Include="SimpleJSON_20121217_StringBuilderEscapeToken.cs" />
+    <Compile Include="SimpleJSON_20121217_StringBuilderEscapeTokenCapacity.cs" />
     <Compile Include="SimpleJSON_20140921_StringBuilderEscapeTokenNumberize.cs" />
     <Compile Include="SimpleJSON_20170308_StringBuilderEscapeTokenJSONObject.cs" />
     <Compile Include="SimpleJSON_20170411_JSONTextModeToString.cs" />
