revision SimpleJSON.cs

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /CSVToJSON/CSVToJSON/bin
 /CSVToJSON/CSVToJSON/obj
 /CSVToJSON/.vs
+/CSVToJSON/BIN/CSVToJSON.vshost.exe
+/CSVToJSON/BIN/CSVToJSON.vshost.exe.manifest
