--- a/JSONParsersPerformance/Project/JSONParsersPerformance.csproj
+++ b/JSONParsersPerformance/Project/JSONParsersPerformance.csproj
@@ -53,6 +53,10 @@
     <Reference Include="LightJson022">
       <HintPath>..\..\..\LightJson\Sources\LightJson\bin\Release\LightJson022.dll</HintPath>
     </Reference>
+    <Reference Include="LitJson, Version=0.9.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\BIN\LitJson.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json1002, Version=10.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\BIN\Newtonsoft.Json1002.dll</HintPath>
